# btml

./: .editorconfig  .gitignore  LICENSE  Makefile  README.md  docker-compose.override.yml.example  docker-compose.yml  go.mod  go.sum  pyproject.toml
cmd/peer/: main.go
cmd/test-model/: main.go
cmd/test-peer/: main.go
cmd/test-play/: main.go
cmd/test-runner/: main.go
cmd/tracker/: main.go
config/tracker/: config.toml
data/prepared_fMNIST/: test_split_0.pt  test_split_1.pt  test_split_10.pt  test_split_11.pt  test_split_13.pt  test_split_15.pt  test_split_17.pt  test_split_2.pt  test_split_20.pt  test_split_23.pt  test_split_24.pt  test_split_26.pt  test_split_29.pt  test_split_33.pt  test_split_34.pt  test_split_35.pt  test_split_36.pt  test_split_37.pt  test_split_38.pt  test_split_39.pt  test_split_42.pt  test_split_46.pt  test_split_47.pt  test_split_5.pt  test_split_51.pt  test_split_54.pt  test_split_55.pt  test_split_56.pt  test_split_58.pt  test_split_59.pt  test_split_6.pt  test_split_60.pt  test_split_62.pt  test_split_63.pt  test_split_65.pt  test_split_67.pt  test_split_69.pt  test_split_75.pt  test_split_77.pt  test_split_78.pt  (+66 more)
docker/: peer.dockerfile  tracker.dockerfile
docs/diagrams/: incoming_model_update.mmd  peer_acquisition.mmd  peer_management.mmd  peer_play.mmd  peer_startup.mmd  peerset_lifecycle.mmd
model/: .gitignore  Dockerfile  Makefile  __init__.py  __main__.py  communication.py  config.py  data.py  evaluate_imported.py  main.py  requirements.txt  training.py
protocols/: model-update.proto  peer-model.proto
tools/: data.py
(+147 files in other folders)
